# hubersed

./: .gitignore  README.md  pyproject.toml
src/hubersed/: __init__.py  conversion.py  make_prospector_model_sed.py  paths.py  plot_prospector_model_sed.py  sampling.py  style.py  utils.py
src/hubersed/prospector/: derived_quantities.py  utils.py
src/hubersed/spender/: quantities.py  utils.py
styles/: apj.mplstyle
