[project]
name = "hubersed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikhil Garuda", email = "nikhilgaruda@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astro-prospector>=1.4.0",
    "astro-sedpy>=0.4.1",
    "astropy>=7.1.1",
    "fsps>=0.4.7",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "six>=1.17.0",
    "spender",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
spender = { git = "https://github.com/galactic-ai/spender" }
